--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
 <div class="logo">
-	<a href='/'><img src='https://gist.githubusercontent.com/literaiiy/29ee460b0eff572d439688d0236e6382/raw/3c289102814fab69f09bb51df0cc88e6afe16341/tiramisulogo.svg' alt="Tiramisu Logo" height='8%' width='auto'></a>
+	<a href='/'><img src='https://raw.githubusercontent.com/gist/literaiiy/1681b4454b0855a538f3005b38d56973/raw/76c2d7457dc8f9969de90a541f00080098d4b193/tmud.svg' alt="Tiramisu Logo" height='8%' width='auto'></a>
 	<form action="/" method="POST">
 		<input type="text" name="content" id="content" autofocus="autofocus" onfocus="this.select()" autocomplete="off" placeholder="Search username or UUID">
 		<script>
