small fix with gitignore & user404

--- a/templates/user404.html
+++ b/templates/user404.html
@@ -1,4 +1,9 @@
-<!-- {% extends 'index.html' %} -->
-<title>Not found</title>
-<h1>Not found</h1>
-<p>This person doesn't exist. Try again?</p>
+<html>
+    <head>
+        <title>Not found</title>
+    </head>
+    <body>
+        <h1>Not found</h1>
+        <p>This person doesn't exist. Try again?</p>
+    </body>
+</html>
