--- a/templates/index.html
+++ b/templates/index.html
@@ -29,48 +29,52 @@
 	<h2>Player Counts</h2>
 </div>
 <body>
-	<table class='tabbol'>
-		<tr>
-			<th>#</th>
-			<th>Game</th>
-			<th>Player Count</th>
-			<th>Portion</th>
-		</tr>
-		{% for dictitem in gameDict %}
-		<tr>
-			{% if dictitem['game'] == 'Total Player Count' %}
-				<td><span class='red'></span></td>
-				<td><span class='red'>{{ dictitem['game'] }}</span></td>
-				<td><span class='red'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+	<table id='table_id' class='tabbol'>
+		<thead>
+			<tr>
+				<th>#</th>
+				<th>Game</th>
+				<th>Player Count</th>
+				<th>Portion</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for dictitem in gameDict %}
+			<tr>
+				{% if dictitem['game'] == 'Total Player Count' %}
+					<td><span class='red'></span></td>
+					<td><span class='red'>{{ dictitem['game'] }}</span></td>
+					<td><span class='red'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
 
-			{% elif dictitem['game'] == 'Main Lobby' %}
-				<td><span class='firebrick'><b>{{ dictitem['pos'] }}</b></span></td>
-				<td><span class='firebrick'>{{ dictitem['game'] }}</span></td>
-				<td><span class='firebrick'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-				<td><span class='firebrick'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
-			{% elif dictitem['game'] == 'Watching a replay' %}
-				<td><span class='cyan'><b>{{ dictitem['pos'] }}</b></span></td>
-				<td><span class='cyan'>{{ dictitem['game'] }}</span></td>
-				<td><span class='cyan'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-				<td><span class='cyan'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
-			{% elif dictitem['game'] == 'In limbo' %}
-				<td><span class='green'><b>{{ dictitem['pos'] }}</b></span></td>
-				<td><span class='green'>{{ dictitem['game'] }}</span></td>
-				<td><span class='green'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-				<td><span class='green'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
-			{% elif dictitem['game'] == 'Idle' %}
-				<td><span class='gold'><b>{{ dictitem['pos'] }}</b></span></td>
-				<td><span class='gold'>{{ dictitem['game'] }}</span></td>
-				<td><span class='gold'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-				<td><span class='gold'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
-			{% else %}
-				<td>{{ dictitem['pos'] }}</td>
-				<td>{{ dictitem['game'] }}</td>
-				<td>{{ '{0:,}'.format(dictitem['playerCount']) }}</td>
-				<td>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</td>
-			{% endif %}
-		</tr>
-		{% endfor %}
+				{% elif dictitem['game'] == 'Main Lobby' %}
+					<td><span class='firebrick'><b>{{ dictitem['pos'] }}</b></span></td>
+					<td><span class='firebrick'>{{ dictitem['game'] }}</span></td>
+					<td><span class='firebrick'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+					<td><span class='firebrick'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
+				{% elif dictitem['game'] == 'Watching a replay' %}
+					<td><span class='cyan'><b>{{ dictitem['pos'] }}</b></span></td>
+					<td><span class='cyan'>{{ dictitem['game'] }}</span></td>
+					<td><span class='cyan'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+					<td><span class='cyan'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
+				{% elif dictitem['game'] == 'In limbo' %}
+					<td><span class='green'><b>{{ dictitem['pos'] }}</b></span></td>
+					<td><span class='green'>{{ dictitem['game'] }}</span></td>
+					<td><span class='green'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+					<td><span class='green'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
+				{% elif dictitem['game'] == 'Idle' %}
+					<td><span class='gold'><b>{{ dictitem['pos'] }}</b></span></td>
+					<td><span class='gold'>{{ dictitem['game'] }}</span></td>
+					<td><span class='gold'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+					<td><span class='gold'>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</span></td>
+				{% else %}
+					<td>{{ dictitem['pos'] }}</td>
+					<td>{{ dictitem['game'] }}</td>
+					<td>{{ '{0:,}'.format(dictitem['playerCount']) }}</td>
+					<td>{{ (100*dictitem['playerCount'] / gameDict[0]['playerCount'])|round(3) }}%</td>
+				{% endif %}
+			</tr>
+			{% endfor %}
+		</tbody>
 	</table>
 </body>
 <div class='h2d'>
