--- a/static/datatables.css
+++ b/static/datatables.css
@@ -21,7 +21,7 @@ font-weight: bold;
 table.dataTable thead th,
 table.dataTable thead td {
 padding: 10px 18px;
-border-bottom: 1px solid #111;
+border-bottom: 1px solid #111111;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -30,7 +30,7 @@ outline: none;
 table.dataTable tfoot th,
 table.dataTable tfoot td {
 padding: 10px 18px 6px 18px;
-border-top: 1px solid #111;
+border-top: 1px solid #111111;
 }
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
@@ -46,10 +46,10 @@ table.dataTable thead .sorting {
 background-image: url("../images/sort_both.png");
 }
 table.dataTable thead .sorting_asc {
-background-image: url("../images/sort_asc.png");
+background-image: url("../images/sort_asc.png") !important;
 }
 table.dataTable thead .sorting_desc {
-background-image: url("../images/sort_desc.png");
+background-image: url("../images/sort_desc.png") !important;
 }
 table.dataTable thead .sorting_asc_disabled {
 background-image: url("../images/sort_asc_disabled.png");
@@ -61,14 +61,14 @@ table.dataTable tbody tr {
 background-color: #ffffff;
 }
 table.dataTable tbody tr.selected {
-background-color: #B0BED9;
+background-color: #aeafd9;
 }
 table.dataTable tbody th,
 table.dataTable tbody td {
 padding: 8px 10px;
 }
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-border-top: 1px solid #ddd;
+border-top: 1px solid #dddddd;
 }
 table.dataTable.row-border tbody tr:first-child th,
 table.dataTable.row-border tbody tr:first-child td, table.dataTable.display tbody tr:first-child th,
@@ -76,12 +76,12 @@ table.dataTable.display tbody tr:first-child td {
 border-top: none;
 }
 table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
-border-top: 1px solid #ddd;
-border-right: 1px solid #ddd;
+border-top: 1px solid #dddddd;
+border-right: 1px solid #dddddd;
 }
 table.dataTable.cell-border tbody tr th:first-child,
 table.dataTable.cell-border tbody tr td:first-child {
-border-left: 1px solid #ddd;
+border-left: 1px solid #dddddd;
 }
 table.dataTable.cell-border tbody tr:first-child th,
 table.dataTable.cell-border tbody tr:first-child td {
@@ -91,13 +91,13 @@ table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
 background-color: #f9f9f9;
 }
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
-background-color: #acbad4;
+background-color: #aaabd4;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 background-color: #f6f6f6;
 }
 table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
-background-color: #aab7d1;
+background-color: #a8a9d1;
 }
 table.dataTable.order-column tbody tr > .sorting_1,
 table.dataTable.order-column tbody tr > .sorting_2,
@@ -111,7 +111,7 @@ table.dataTable.order-column tbody tr.selected > .sorting_2,
 table.dataTable.order-column tbody tr.selected > .sorting_3, table.dataTable.display tbody tr.selected > .sorting_1,
 table.dataTable.display tbody tr.selected > .sorting_2,
 table.dataTable.display tbody tr.selected > .sorting_3 {
-background-color: #acbad5;
+background-color: #abacd5;
 }
 table.dataTable.display tbody tr.odd > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 {
 background-color: #f1f1f1;
@@ -123,13 +123,13 @@ table.dataTable.display tbody tr.odd > .sorting_3, table.dataTable.order-column.
 background-color: whitesmoke;
 }
 table.dataTable.display tbody tr.odd.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_1 {
-background-color: #a6b4cd;
+background-color: #a5a6cd;
 }
 table.dataTable.display tbody tr.odd.selected > .sorting_2, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_2 {
-background-color: #a8b5cf;
+background-color: #a6a7cf;
 }
 table.dataTable.display tbody tr.odd.selected > .sorting_3, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_3 {
-background-color: #a9b7d1;
+background-color: #a7a8d1;
 }
 table.dataTable.display tbody tr.even > .sorting_1, table.dataTable.order-column.stripe tbody tr.even > .sorting_1 {
 background-color: #fafafa;
@@ -141,13 +141,13 @@ table.dataTable.display tbody tr.even > .sorting_3, table.dataTable.order-column
 background-color: #fefefe;
 }
 table.dataTable.display tbody tr.even.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_1 {
-background-color: #acbad5;
+background-color: #abacd5;
 }
 table.dataTable.display tbody tr.even.selected > .sorting_2, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_2 {
-background-color: #aebcd6;
+background-color: #acadd6;
 }
 table.dataTable.display tbody tr.even.selected > .sorting_3, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_3 {
-background-color: #afbdd8;
+background-color: #adaed8;
 }
 table.dataTable.display tbody tr:hover > .sorting_1, table.dataTable.order-column.hover tbody tr:hover > .sorting_1 {
 background-color: #eaeaea;
@@ -159,16 +159,16 @@ table.dataTable.display tbody tr:hover > .sorting_3, table.dataTable.order-colum
 background-color: #efefef;
 }
 table.dataTable.display tbody tr:hover.selected > .sorting_1, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_1 {
-background-color: #a2aec7;
+background-color: #a0a1c7;
 }
 table.dataTable.display tbody tr:hover.selected > .sorting_2, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_2 {
-background-color: #a3b0c9;
+background-color: #a1a2c9;
 }
 table.dataTable.display tbody tr:hover.selected > .sorting_3, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_3 {
-background-color: #a5b2cb;
+background-color: #a3a4cb;
 }
 table.dataTable.no-footer {
-border-bottom: 1px solid #111;
+border-bottom: 1px solid #111111;
 }
 table.dataTable.nowrap th, table.dataTable.nowrap td {
 white-space: nowrap;
@@ -271,6 +271,9 @@ position: relative;
 clear: both;
 *zoom: 1;
 zoom: 1;
+min-height:50%;
+max-height:50%;
+
 }
 .dataTables_wrapper .dataTables_length {
 float: left;
@@ -292,6 +295,7 @@ border-radius: 3px;
 padding: 5px;
 background-color: transparent;
 margin-left: 3px;
+width: 75%;
 }
 .dataTables_wrapper .dataTables_info {
 clear: both;
@@ -313,26 +317,14 @@ text-align: center;
 text-decoration: none !important;
 cursor: pointer;
 *cursor: hand;
-color: #333 !important;
+color: #333333 !important;
 border: 1px solid transparent;
 border-radius: 2px;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-color: #333 !important;
+color: #333333 !important;
 border: 1px solid #979797;
 background-color: white;
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #dcdcdc));
-/* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, white 0%, #dcdcdc 100%);
-/* Chrome10+,Safari5.1+ */
-background: -moz-linear-gradient(top, white 0%, #dcdcdc 100%);
-/* FF3.6+ */
-background: -ms-linear-gradient(top, white 0%, #dcdcdc 100%);
-/* IE10+ */
-background: -o-linear-gradient(top, white 0%, #dcdcdc 100%);
-/* Opera 11.10+ */
-background: linear-gradient(to bottom, white 0%, #dcdcdc 100%);
-/* W3C */
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
 cursor: default;
@@ -343,37 +335,13 @@ box-shadow: none;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
 color: white !important;
-border: 1px solid #111;
-background-color: #585858;
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111));
-/* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #585858 0%, #111 100%);
-/* Chrome10+,Safari5.1+ */
-background: -moz-linear-gradient(top, #585858 0%, #111 100%);
-/* FF3.6+ */
-background: -ms-linear-gradient(top, #585858 0%, #111 100%);
-/* IE10+ */
-background: -o-linear-gradient(top, #585858 0%, #111 100%);
-/* Opera 11.10+ */
-background: linear-gradient(to bottom, #585858 0%, #111 100%);
+border: 1px solid #514f65;
+background-color: #9896ad;
 /* W3C */
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button:active {
 outline: none;
-background-color: #2b2b2b;
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b2b2b), color-stop(100%, #0c0c0c));
-/* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-/* Chrome10+,Safari5.1+ */
-background: -moz-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-/* FF3.6+ */
-background: -ms-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-/* IE10+ */
-background: -o-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-/* Opera 11.10+ */
-background: linear-gradient(to bottom, #2b2b2b 0%, #0c0c0c 100%);
-/* W3C */
-box-shadow: inset 0 0 3px #111;
+background-color: #686582;
 }
 .dataTables_wrapper .dataTables_paginate .ellipsis {
 padding: 0 1em;
@@ -402,7 +370,7 @@ background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 
 .dataTables_wrapper .dataTables_info,
 .dataTables_wrapper .dataTables_processing,
 .dataTables_wrapper .dataTables_paginate {
-color: #333;
+color: #333333;
 }
 .dataTables_wrapper .dataTables_scroll {
 clear: both;
@@ -423,7 +391,7 @@ margin: 0 !important;
 padding: 0 !important;
 }
 .dataTables_wrapper.no-footer .dataTables_scrollBody {
-border-bottom: 1px solid #111;
+border-bottom: 1px solid #111111;
 }
 .dataTables_wrapper.no-footer div.dataTables_scrollHead table.dataTable,
 .dataTables_wrapper.no-footer div.dataTables_scrollBody > table {
